Revert "Change the header to avoid the extra padding"
This reverts commit 6111134e29dedfdcc4e2e3bea8158358143bd670.

--- a/_src/scss/02-layout/_header.scss
+++ b/_src/scss/02-layout/_header.scss
@@ -4,14 +4,13 @@
 .masthead {
   // Positioning and sizing
   height: $header-height-phone;
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 10;
 
   // Background and borders
   background-color: $background-color;
-
   @include mq(laptop) {
     height: $header-height;
     background-color: $header-background;
